--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,10 @@
   }
 }
 
+body{
+  background-color: #03090F;
+}
+
 .title-section{
   @apply font-["Lufga"] text-4xl md:text-5xl text-title font-black;
 }
@@ -16,3 +20,29 @@
   @apply text-body mt-4 md:text-xl max-w-[507px] md:max-w-[600px];
 }
 
+.no-visible-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  -webkit-overflow-scrolling: touch;
+}
+
+.no-visible-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Estilizando o scrollbar em navegadores baseados em WebKit (como Chrome, Safari, Opera) */
+/* Estilizando a barra de rolagem */
+::-webkit-scrollbar {
+  width: 16px; /* largura da barra de rolagem */
+}
+
+/* Estilizando o thumb (a parte arrastável da barra de rolagem) */
+::-webkit-scrollbar-thumb {
+  background-color: #0F2844; /* cor do thumb */
+  border-radius: 6px; /* borda do thumb */
+}
+
+/* Estilizando a track (a parte não arrastável da barra de rolagem) */
+::-webkit-scrollbar-track {
+  background-color: #03090F; /* cor da track */
+}
